2008-05-23  Michael Hutchinson  <mhutchinson@novell.com> 

	* configure: Bump version.
	* AspNetEdit.make: Fix dist. Fix build on non-bash sh.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.Integration/MonoDevelopProxy.cs: Track api
	  changes.

2008-05-20  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.Integration/EditorProcess.cs: Add addin dependency to
	  remote process object.

2008-05-19  Michael Hutchinson <mhutchinson@novell.com> 

	* AspNetEdit.mdp, AspNetEdit.Integration/ToolboxProvider.cs,
	  AspNetEdit.make, AspNetEdit.addin.xml: Remove unneeded toolbox
	  provider.
	* AspNetEdit.Integration/AspNetEditViewContent.cs,
	  AspNetEdit.Integration/MonoDevelopProxy.cs: Track message service
	  API changes. Thanks to John Garrison.

2008-02-26  Michael Hutchinson  <mhutchinson@novell.com> 

	* AspNetEdit.Integration/AspNetEditDisplayBinding.cs:
	* AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs:
	* AspNetEdit.Editor.Persistence/DesignTimeParser.cs:
	* AspNetEdit.Editor.Persistence/ParsingObject.cs:
	Track namespace changes in MonoDevelop.Aspnet.

2008-01-31  Michael Hutchinson  <mhutchinson@novell.com> 

	* AspNetEdit.mdp:
	* configure:
	* AspNetEdit.make: Get AspNetEdit building again.
	
	* AspNetEdit.Editor.UI/RootDesignerView.cs: 
	* AspNetEdit.Integration/GeckoWebBrowser.cs: Copy simple code so that 
	  we don't have to depend on another unstable addin.
	
	* AspNetEdit.addin.xml:
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Check that the 
	  Mozilla extension is installed,and if not, install it.
	
	* chrome/Makefile.am:
	* chrome/aspdesigner.manifest.in: Unneeded, removed.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.addin.xml: Update MD version.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp: Updated.
	* AspNetEdit.addin.xml: Changed add-in category.

2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* configure: Updated versions to 0.18.
