@@ -6,7 +6,7 @@
        url         = "http://www.monodevelop.com/"
        description = "Visual Designer for ASP.NET Web Forms."
        category    = "Web Development"
-       version     = "0.19.0">
+       version     = "1.9.0">
 	
 	<Runtime>
 		<Import assembly = "AspNetEdit.dll"/>
@@ -14,14 +14,14 @@
 	</Runtime>
 
 	<Dependencies>
-		<Addin id="Core" version="0.19.0"/>
-		<Addin id="Core.Gui" version="0.19.0"/>
-		<Addin id="Projects" version="0.19.0"/>
-		<Addin id="Projects.Gui" version="0.19.0"/>
-		<Addin id="Ide" version="0.19.0"/>
-		<Addin id="Deployment" version="0.19.0" />
-		<Addin id="AspNet" version="0.19.0" />
-		<Addin id="DesignerSupport" version="0.19.0" />
+		<Addin id="Core" version="1.9.0"/>
+		<Addin id="Core.Gui" version="1.9.0"/>
+		<Addin id="Projects" version="1.9.0"/>
+		<Addin id="Projects.Gui" version="1.9.0"/>
+		<Addin id="Ide" version="1.9.0"/>
+		<Addin id="Deployment" version="1.9.0" />
+		<Addin id="AspNet" version="1.9.0" />
+		<Addin id="DesignerSupport" version="1.9.0" />
 	</Dependencies>
 	
 	<Extension path = "/MonoDevelop/Ide/DisplayBindings">
