@@ -1,3 +1,7 @@
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* configure, AspNetEdit.addin.xml: Bump MD version.
+
 2008-05-23  Michael Hutchinson  <mhutchinson@novell.com> 
 
 	* configure: Bump version.
